# ariana-ide

./: .gitignore  CLAUDE.md  Justfile  LICENSE  README.md  bash.exe.stackdump  build-config.js  build-package.js  configure-build.js  initial_config.json  mcp-servers.jsonc  restore-package.js  rustfmt.toml  setup.bat  start-backend.bat
...additional-components/: package-lock.json  package.json
...additional-components/audio/components/: MicrophoneButton.tsx
...additional-components/audio/services/: AudioContext.tsx
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: format-check.yml
additional-components/: README.md  test-server.js  test-standalone.html
additional-components/audio/: index.ts
additional-components/audio/components/: Example.tsx  MicrophoneComponent.tsx  TranscriptionEditor.tsx
additional-components/audio/services/: audioAPI.ts
additional-components/audio/types/: index.ts
backend/: .env.example  API_DOCUMENTATION.md  Cargo.toml  README_LLM_API.md
backend/examples/: frontend_integration.js  test_api.sh
backend/migrations/: 20250617095351_create_accounts_table.sql  20250617095358_create_login_codes_table.sql
backend/src/: auth.rs  database.rs  email.rs  main.rs
backend/src/llm/: api.rs  clients.rs  mod.rs  providers.rs  types.rs
cli-agents/: Cargo.toml  Justfile  README.md  example.py  setup.py  simple_example.py
cli-agents/src/: claude_code.rs  error.rs  file_watcher.rs  lib.rs  python_bindings.rs  types.rs
docs/: BUILD.md  DEV_GUIDE.md  INSTALL_DEV.md  ROADMAP.md  RUN_DEV.md
example-configs/: ariana-beta.json  ariana-test.json
frontend/: .gitignore  README.md  bad.hex  biome.json  decode.py  good.hex  package-lock.json  package.json  result.txt  tsconfig.json
frontend/scripts/: build_linux.sh  build_macos.sh  build_simple.sh  build_windows.ps1
frontend/src/: cli.js  cli.ts
frontend/tauri-app/: CUSTOM_TERMINAL_API.md  index.html  package-lock.json  package.json  test-dialog.html  tsconfig.json  vite.config.js  vite.config.ts
frontend/tauri-app/scripts/: generateThemes.cjs  generate_theme_colors.py
frontend/tauri-app/src/: App.jsx  App.tsx  Canvas.tsx  CanvasView.tsx  GitProjectView.tsx  Onboarding.tsx  Repl.tsx  index.css  main.tsx  utils.ts  xterm-tweaks.css
frontend/tauri-app/src-tauri/: 2  Cargo.toml  Cross.toml  Info.plist  entitlements.plist  tauri.conf.json  test-lsp.ts
frontend/tauri-app/src-tauri/capabilities/: migrated.json
frontend/tauri-app/src-tauri/icons/: icon.icns
frontend/tauri-app/src-tauri/src/: cli_agents_test.rs  custom_terminal.rs  custom_terminal_commands.rs  file_tree.rs  file_watcher.rs  lib.rs  logger.rs  lsp.rs  main.rs  os.rs  terminal.rs
frontend/tauri-app/src/bindings/: os.ts
frontend/tauri-app/src/canvas/: Audio.ts  AudioOnCanvas.tsx  Canvas.tsx  CanvasHeader.tsx  CodeEditor.ts  CodeEditorCanvas.tsx  CustomTerminal.ts  CustomTerminalExample.tsx  CustomTerminalOnCanvas.tsx  CustomTerminalRenderer.tsx  ElementOverlay.tsx  FileTreeCanvas.ts  FileTreeOnCanvas.tsx  FloatingTerminalInput.tsx  README_Terminal.md  Rectangle.ts  RectangleOnCanvas.tsx  TabBar.tsx  Terminal.ts  TerminalOnCanvas.tsx  Terminal_Examples.md  Terminal_Input_Fix.md  TextArea.ts  TextAreaOnCanvas.tsx  gridOptimizer.ts  gridWorker.ts  gridWorkerCore.ts  index.ts  types.ts  utils.ts
frontend/tauri-app/src/canvas/editor/: Cursor.tsx  Document.ts  EditorStore.ts  EditorView.tsx  HighlightedLine.tsx  InputHandler.tsx  Line.tsx
frontend/tauri-app/src/canvas/editor/syntax/: SyntaxHighlighter.ts
frontend/tauri-app/src/canvas/editor/utils/: measurements.ts  positions.ts
frontend/tauri-app/src/components/: BackgroundAgentTerminalView.tsx  BackgroundAgentsList.tsx  CommunicationPalette.tsx  DiffManagement.tsx  FileTree.tsx  LandingPage.tsx  Logo.tsx  OsSessionKindSelector.tsx  ProjectDirectoryList.tsx  ProjectSelector.tsx
frontend/tauri-app/src/contexts/: GitProjectContext.tsx
frontend/tauri-app/src/hooks/: useBuildConfig.ts  useTheme.ts  useUserConfig.ts
frontend/tauri-app/src/scripting/: baseScript.ts  interpreter.ts
frontend/tauri-app/src/services/: BackgroundAgentManager.ts  CanvasService.ts  ClaudeCodeAgent.ts  CommunicationService.ts  CustomTerminalAPI.ts  DiffService.ts  GitService.ts  HeadlessTerminalAPI.ts  ProcessManager.ts  ProjectService.ts  TerminalService.ts
frontend/tauri-app/src/state/: index.tsx
frontend/tauri-app/src/types/: BackgroundAgent.ts  GitProject.ts  Task.ts  diff.ts  jsx.d.ts  project.ts
frontend/tauri-app/src/utils/: EventEmitter.ts  colors.ts  index.ts
