[package]
name = "ariana-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"
validator = { version = "0.20.0", features = ["derive"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "ring", "tokio1", "tokio1-rustls", "rustls", "rustls-native-certs"] }
dotenvy = "0.15"
log = "0.4"
fern = "0.7.1"
humantime = "2.1"
