[package]
name = "ariana-ide"
version = "0.1.0"
description = "ariana IDE - A modern development environment"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "window-hide", "window-start-dragging", "window-maximize", "window-close", "window-unmaximize", "window-unminimize", "window-minimize", "window-show", "fs-all", "path-all", "shell-open"] }
window-vibrancy = "0.6.0"
tokio = { version = "1.0", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
async-trait = "0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
