[package]
name = "ariana-ide"
version = "0.1.0"
description = "ariana IDE - A modern development environment"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.1", features = ["macos-private-api"] }
window-vibrancy = "0.6.0"
tokio = { version = "1.0", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
async-trait = "0.1"
# anes = { version = "0.2", features = ["parser"] }
vt100          = "0.15" 
unicode-width  = "0.1"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
walkdir = "2.5.0"
tauri-plugin-os = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
